# proxy

./: CMakeLists.txt  README.md  calculator.hpp  common.hpp  consumer.hpp  dataManager.cpp  dataManager.hpp  main.cpp  proxy.cpp  proxy.hpp  runnable.cpp  runnable.hpp
.github/workflows/: cmake.yml
test/testclient/: CMakeLists.txt  testclient.cpp
